--- a/src/main/Website/WebPage.html
+++ b/src/main/Website/WebPage.html
@@ -1,35 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+
+    </style>
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="First.html">Contact</a></li>
-                <li><a href="Second.html">Resume</a></li>
-                <li><a href="Third.html">Linkedin</a></li>
-                <li><a href="Fourth.html">Github</a></li>
-                <li><a href="Fifth.html">Projects</a></li>
-            </ul>
-        </nav>
-    </header>
-    <section class="features">
+<header>
+    <h1>John Doe</h1>
+    <p>Software Development Engineer</p>
+</header>
+<!-- Image Banner -->
+<img src="pexels-ivaoo-691710.jpg" alt="Banner Image" class="banner">
 
-    </section>
-    <section class="about">
-
-    </section>
-    <section class="contact">
-
-    </section>
-    <section class="Book_an_appointment"></section>
-    <footer></footer>
-
-
-
+<section id="about">
+    <h2>About Me</h2>
+    <p>I'm a passionate software engineer with 5 years of experience in building applications for the web and mobile platforms. Skilled in various technologies including JavaScript, Python, and Java.</p>
+</section>
+<section id="projects">
+    <h2>Projects</h2>
+    <ul>
+        <li><strong>Project Title:</strong> Description of the project, what it does, and what technologies were used.</li>
+        <li><strong>Project Title:</strong> Description of the project, what it does, and what technologies were used.</li>
+    </ul>
+</section>
+<section id="contact">
+    <h2>Contact Me</h2>
+    <p>Email: <a href="mailto:john.doe@example.com">john.doe@example.com</a></p>
+    <div class="social-links">
+        <a href="https://github.com/yourgithubusername" target="_blank" title="GitHub">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 0C5.373 0 0 5.373 0 12c0 5.302 3.438 9.8 8.205 11.385.6.111.82-.261.82-.577v-2.165c-3.338.726-4.033-1.61-4.033-1.61-.546-1.387-1.333-1.756-1.333-1.756-1.09-.745.082-.729.082-.729 1.205.085 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.108-.775.419-1.305.762-1.604-2.665-.305-5.467-1.332-5.467-5.93 0-1.31.467-2.381 1.236-3.221-.124-.303-.536-1.523.117-3.176 0 0 1.008-.322 3.3 1.23.957-.266 1.984-.399 3.003-.404 1.018.005 2.045.138 3.003.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.241 2.873.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.61-2.807 5.62-5.479 5.92.43.372.823 1.102.823 2.222v3.293c0 .32.217.694.825.576C20.565 21.795 24 17.296 24 12 24 5.373 18.627 0 12 0z"/></svg>
+            GitHub
+        </a>
+        <a href="https://www.linkedin.com/in/yourlinkedinprofile" target="_blank" title="LinkedIn">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M22.23 0H1.77C.8 0 0 .81 0 1.81v20.38C0 23.19.8 24 1.77 24h20.46c.97 0 1.77-.81 1.77-1.81V1.81C24 .81 23.2 0 22.23 0zm-13.6 20.45h-3.6V8.98h3.6v11.47zm-1.8-13.05c-1.16 0-2.1-.95-2.1-2.12s.94-2.12 2.1-2.12c1.16 0 2.1.95 2.1 2.12s-.94 2.12-2.1 2.12zm13.6 13.05h-3.6v-5.34c0-1.27-.02-2.91-1.78-2.91-1.78 0-2.05 1.39-2.05 2.82v5.43h-3.6V8.98h3.45v1.56h.05c.48-.91 1.65-1.86 3.4-1.86 3.64 0 4.31 2.4 4.31 5.52v6.25z"/></svg>
+            LinkedIn
+        </a>
+    </div>
+</section>
 </body>
 </html>
